# oh-my-codebuddy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DEMO.md  README.md  RELEASE_BODY.md  biome.json  package-lock.json  package.json  prd.json  progress.txt  task.json
.codebuddy/: ralph-loop.local.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: STATE_MODEL.md  _config.yml  adapt.md  agents.html  architecture-overview.md  clawhip-event-contract.md  codex-native-hooks.md  dependency-overrides.md  deprecation-policy.md  getting-started.html  guidance-schema.md  hooks-extension.md  index.html  integrations.html  interop-team-mutation-contract.md  migration-mainline-post-v0.4.4.md  openclaw-integration.de.md  openclaw-integration.es.md  openclaw-integration.fr.md  openclaw-integration.it.md  openclaw-integration.ja.md  openclaw-integration.ko.md  openclaw-integration.md  openclaw-integration.pt.md  openclaw-integration.ru.md  openclaw-integration.tr.md  openclaw-integration.uk.md  openclaw-integration.vi.md  openclaw-integration.zh-TW.md  openclaw-integration.zh.md  prompt-guidance-contract.md  prompt-migration-changelog.md  qa-plan-0.4.2.md  release-body-0.9.0.md  release-body-0.9.1.md  release-notes-0.11.12.md  release-notes-0.11.13.md  release-notes-0.12.0.md  release-notes-0.12.1.md  release-notes-0.12.3.md  (+24 more)
missions/: README.md
playground/: README.md
prompts/: analyst.md  build-fixer.md  executor.md  explore-harness.md  explore.md  git-master.md  planner.md  qa-tester.md  researcher.md  sisyphus-lite.md  verifier.md  (+2 more)
(+716 files in other folders)
